fix style aligning

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -1,41 +1,35 @@
 .header {
-    position: fixed;
-    z-index: 10;
-
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0 216px;
-    width: 100%;
-    height: 100%;
-    max-height: 100px;
-    min-height: 60px;
-
-    text-align: center;
-
-    color: #FFF;
-    background: linear-gradient(var(--black-gradient));
-
-    font-family: Manrope, serif;
-
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 33px;
+  position: fixed;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  min-height: 60px;
+  max-height: 100px;
+  padding: 0 216px;
+  text-align: center;
+  color: #ffffff;
+  background: linear-gradient(var(--black-gradient));
+  font-family: Manrope, serif;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 33px;
 }
 
 @media screen and (max-width: 1500px) {
-    .header{
-        max-height: 60px;
-        padding: 0;
-        justify-content: space-around;
-    }
+  .header {
+    justify-content: space-around;
+    max-height: 60px;
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 700px) {
-    .header{
-        max-height: 60px;
-
-    }
+  .header {
+    max-height: 60px;
+  }
 }
 
